--- a/src/main/resources/static/assets/tabler/css/dashboard.css
+++ b/src/main/resources/static/assets/tabler/css/dashboard.css
@@ -3161,9 +3161,9 @@ input[type="button"].btn-block {
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #16181b;
+  color: #FFF;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color: #467fcf;
 }
 
 .dropdown-item.active, .dropdown-item:active {
@@ -3840,6 +3840,7 @@ input[type="button"].btn-block {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  padding:0 0 0 50px;
 }
 
 .nav-link {
@@ -10317,6 +10318,7 @@ body.fixed-header .header {
   opacity: .8;
   color: inherit;
   text-decoration: none;
+  color:#FFF;
 }
 
 .header-brand-img {
@@ -10367,7 +10369,7 @@ body.fixed-header .header {
 }
 
 .header-toggler:hover {
-  color: #6e7687;
+
 }
 
 .header-toggler-icon {
@@ -11606,6 +11608,7 @@ a.icon:hover {
   display: flex;
   -ms-flex-align: center;
   align-items: center;
+  width:100px;
 }
 
 .nav-link .badge,
@@ -13434,7 +13437,7 @@ Card alert
 }
 
 .dropdown-item {
-  color: #6e7687;
+  color: #FFF;
 }
 
 .dropdown-menu-arrow:before {
