--- a/src/main/resources/static/assets/tabler/css/dashboard.css
+++ b/src/main/resources/static/assets/tabler/css/dashboard.css
@@ -10308,7 +10308,7 @@ body.fixed-header .header {
   margin-right: 1rem;
   font-size: 1.2rem;
   white-space: nowrap;
-  font-weight: 0;
+  font-weight: 700;
   padding: 0;
   transition: .3s opacity;
   line-height: 3.13rem;
@@ -11618,6 +11618,7 @@ a.icon:hover {
   right: 0;
   padding: .2rem .25rem;
   min-width: 1rem;
+  font-size:16px;
 }
 
 .nav-tabs {
@@ -11647,6 +11648,7 @@ a.icon:hover {
 .nav-tabs .nav-link.active {
   border-color: #467fcf;
   color: #FFF;
+  font-size:16px;
   background: transparent;
 }
 
